--- a/CompletedCourses/MainWindow.xaml
+++ b/CompletedCourses/MainWindow.xaml
@@ -1,12 +1,32 @@
-﻿<Window x:Class="CompletedCourses.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CompletedCourses"
+        xmlns:Model="clr-namespace:CompletedCourses.Model" x:Class="CompletedCourses.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
+    <Window.Resources>
+        <CollectionViewSource x:Key="studentViewSource" d:DesignSource="{d:DesignInstance {x:Type Model:Student}, CreateList=True}"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource studentViewSource}">
+        <Label Content="Students" HorizontalAlignment="Left" Margin="66,28,0,0" VerticalAlignment="Top"/>
+
+        <DataGrid x:Name="studentDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="66,87,100,132" RowDetailsVisibilityMode="VisibleWhenSelected">
+            <DataGrid.ItemContainerStyle>
+                <Style TargetType="DataGridRow">
+                    <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick"/>
+                </Style>
+            </DataGrid.ItemContainerStyle>
+
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="iDColumn" Binding="{Binding ID}" Header="ID" Width="Auto"/>
+                <DataGridTextColumn x:Name="firstNameColumn" Binding="{Binding FirstName}" Header="First Name" Width="Auto"/>
+                <DataGridTextColumn x:Name="lastNameColumn" Binding="{Binding LastName}" Header="Last Name" Width="Auto"/>
+                <DataGridTextColumn x:Name="emailColumn" Binding="{Binding Email}" Header="Email" Width="*" />
+            </DataGrid.Columns>
+        </DataGrid>
+
     </Grid>
 </Window>
