--- a/CompletedCourses/CompletedCoursesWindow.xaml
+++ b/CompletedCourses/CompletedCoursesWindow.xaml
@@ -87,7 +87,7 @@
                      Foreground="Blue"
                      FontSize="14" />
         </Grid>
-        <DataGrid x:Name="courseDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="26,21,29,57" Grid.Row="1" RowDetailsVisibilityMode="VisibleWhenSelected">
+        <DataGrid x:Name="courseDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="26,21,29,30" Grid.Row="1" Grid.RowSpan="2" RowDetailsVisibilityMode="VisibleWhenSelected">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="courseCodeColumn" Binding="{Binding CourseCode}" Header="Course Code" Width="Auto"/>
                 <DataGridTextColumn x:Name="titleColumn" Binding="{Binding Title}" Header="Title" Width="Auto"/>
@@ -107,11 +107,11 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Label Content="Course Code"
                    Grid.Column="0"
@@ -195,10 +195,10 @@
         <Grid
             Grid.Row="2" Grid.Column="1">
             <Button 
-                x:Name="AddCourse" Content="Add Course" HorizontalAlignment="Left" Margin="36,41,0,0" VerticalAlignment="Top" Width="75" 
+                x:Name="AddCourse" Content="Add Course" HorizontalAlignment="Left" Margin="36,41,0,0" VerticalAlignment="Top" Width="75" Height="40"
                     Click="AddCourse_Click"/>
             <Button Content="Back To Main Window"
-                x:Name="Back2Main" HorizontalAlignment="Left" Margin="199,41,0,0" VerticalAlignment="Top" Width="75" 
+                x:Name="Back2Main" HorizontalAlignment="Left" Margin="170,41,0,0" VerticalAlignment="Top" Width="128" Height="40"
                     Click="Back2Main_Click"/>
 
         </Grid>
